Added new scenarios
